--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@floating-ui/dom": "^1.5.3"
+		"@floating-ui/dom": "^1.5.3",
+		"uuid": "^9.0.1"
 	}
 }
