--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@tailwindcss/forms": "^0.5.6",
+		"@types/bcrypt": "^5.0.2",
+		"@types/bcryptjs": "^2.4.6",
+		"@types/jsonwebtoken": "^9.0.5",
 		"@types/node": "^20.8.7",
 		"autoprefixer": "^10.4.16",
 		"eslint": "^8.28.0",
@@ -36,6 +39,9 @@
 	"type": "module",
 	"dependencies": {
 		"@floating-ui/dom": "^1.5.3",
+		"bcryptjs": "^2.4.3",
+		"dotenv": "^16.3.1",
+		"jsonwebtoken": "^9.0.2",
 		"uuid": "^9.0.1"
 	}
 }
