--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
 	"type": "module",
 	"dependencies": {
 		"@floating-ui/dom": "^1.5.3",
+		"bcrypt": "^5.1.1",
 		"bcryptjs": "^2.4.3",
 		"dotenv": "^16.3.1",
 		"jsonwebtoken": "^9.0.2",
+		"pg": "^8.11.3",
 		"uuid": "^9.0.1"
 	}
 }
